--- a/html/templates/welcome_screen.html
+++ b/html/templates/welcome_screen.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Aurorastation Welcome Screen</title>
+		<title>Blue Shift Welcome Screen</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- Bootstrap -->
@@ -25,7 +25,7 @@
 					<li role="presentation" id="testmerges-tab"><a href="#testmerges" aria-controls="testmerges" role="tab" data-toggle="tab">Test Merges</a></li>
 					<li role="presentation" id="memo-tab"><a href="#memo" aria-controls="memo" role="tab" data-toggle="tab">Staff Memos</a></li>
 					<li role="presentation" id="note-tab"><a href="#note" aria-controls="note" role="tab" data-toggle="tab">Notifications</a></li>
-					<li role="presentation"><a href="#webint">My Profile</a></li>
+					<li role="presentation"><a href="https://discord.gg/NC93VGT">Discord</a></li>
 				</ul>
 			</nav>
 			<div class="panel-body">
@@ -33,28 +33,27 @@
 					<div role="tabpanel" class="tab-pane active" id="home">
 						<!-- Don't forget to update the JSlink switch in client/Topic if you edit this! -->
 						<center>
-							<h1>Welcome to Aurorastation!</h1>
+							<h1>ƒобро пожаловать на Blue Shift!</h1>
 						</center>
 						<p>
-							Aurorastation is a SS13 heavy roleplay server with antagonists enabled that has been running since 2013. We utilize a customized build of the Baystation12 codebase, which can be found <a href="?JSlink=github">here, on Github.</a>
+							Ќаш сервер нацелен на Medium RP и преследует за собой цель сохран€ть классическую задумку Space Station 13. ƒл€ этого мы используем русифицированный билд Aurora Station, который вы можете найти здесь - <a href="https://github.com/cyberalexix/Aurora.3">Github</a>
 						</p>
 						<p>
-							New players should take care to read <a href="?JSlink=rules">the rules,</a> especially if you're new to roleplay. Should any questions arise, you are expected to adminhelp (F1) them and ask!
+							≈сли вы новый игрок на нашем сервере, об€зательно прочти <a href="https://discord.gg/NC93VGT">правила</a>, они значительно отличаютс€ от правил других серверов. ≈сли у вас все ещЄ остались вопросы, вы можете задать их в Adminhelp (F1).
 						</p>
 						<p>
-							Further information about the server can be found at the following places:
+							Ѕольше информации о сервере вы можете найти перейд€ по этим ссылкам:
 							<br>
 							<ul>
-								<li><a href="?JSlink=forums">The forums</a> - For whitelist applications, announcements, general discussion, etcetera.</li>
-								<li><a href="?JSlink=wiki">The wiki</a> - Primarily for lore reference, and gameplay guides.</li>
-								<li><a href="?JSlink=webint">The web-interface</a> - A custom website which adds additional functionality to the game. Anything from syndicate contracts, to reviewing your whitelists, bans, etcetera.</li>
+								<li><a href="https://discord.gg/NC93VGT">Discord</a> - “ут вы можете пообщатьс€ с другими космонавтиками, или же подать жалобу на игрока или администратора.</li>
+								<li><a href="https://wiki.aurorastation.org">The wiki</a> - —сылка на английскую вики по игре, наше вики будет сделано в скором времени.</li>
 							</ul>
 						</p>
 					</div>
 					<div role="tabpanel" class="tab-pane" id="motd"><div class="row"></div></div>
 					<div role="tabpanel" class="tab-pane" id="testmerges"></div>
 					<div role="tabpanel" class="tab-pane" id="memo"></div>
-					<div role="tabpanel" class="tab-pane" id="note"><div class="alert alert-info" id="note-placeholder">You do not have any notifications to show.</div></div>
+					<div role="tabpanel" class="tab-pane" id="note"><div class="alert alert-info" id="note-placeholder">” теб€ нет никаких уведомлений.</div></div>
 				</div>
 			</div>
 		</div>
